<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2022 NetEase, Inc. All rights reserved.
  ~ Use of this source code is governed by a MIT license that can be
  ~ found in the LICENSE file.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_e9eff5"
    tools:ignore="MissingDefaultResource">

    <com.netease.yunxin.kit.common.ui.widgets.BackTitleBar
        android:id="@+id/setting_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        app:titleText="@string/mine_setting"/>

    <LinearLayout android:id="@+id/next_group_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_white_reduce_bg"
        android:layout_marginRight="@dimen/dimen_20_dp"
        android:layout_marginLeft="@dimen/dimen_20_dp"
        android:layout_marginTop="@dimen/dimen_16_dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setting_title_bar"
        tools:ignore="SpUsage">

        <FrameLayout android:id="@+id/notify_fl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_46_dp">

            <TextView
                android:id="@+id/notify_tv"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_46_dp"
                android:layout_marginStart="@dimen/dimen_16_dp"
                android:gravity="center"
                android:text="@string/setting_notify"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/dimen_16_dp" />

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginEnd="36dp"
                android:src="@drawable/ic_frame_mine_right_arrow"
                android:layout_gravity="end|center_vertical"/>
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="20dp"
            android:background="@color/color_f5f8fc"/>

        <FrameLayout android:id="@+id/clear_fl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_46_dp">

            <TextView
                android:id="@+id/clear_tip_tv"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_46_dp"
                android:layout_marginStart="@dimen/dimen_16_dp"
                android:gravity="center"
                android:text="@string/setting_clear_cache"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/dimen_16_dp" />

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginEnd="36dp"
                android:src="@drawable/ic_frame_mine_right_arrow"
                android:layout_gravity="end|center_vertical"/>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/notify_message_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dimen_20_dp"
        android:layout_marginLeft="@dimen/dimen_20_dp"
        android:layout_marginTop="@dimen/dimen_16_dp"
        android:background="@drawable/app_white_round_bg"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/next_group_ll">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_46_dp">

            <TextView
                android:id="@+id/play_mode_tv"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_46_dp"
                android:gravity="center"
                android:text="@string/setting_play_mode"
                android:textColor="@color/color_333333"
                android:layout_marginStart="@dimen/dimen_16_dp"
                android:textSize="@dimen/dimen_16_dp"
                tools:ignore="SpUsage" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/play_mode_sc"
                android:layout_width="@dimen/dimen_60_dp"
                android:layout_height="@dimen/dimen_20_dp"
                android:clickable="false"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/dimen_16_dp"
                android:thumb="@drawable/switch_thumb_selector"
                app:track="@drawable/switch_track_selector" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1_dp"
            android:background="@color/color_f5f8fc" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_46_dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_46_dp"
                android:gravity="center"
                android:text="@string/setting_friend_delete_mode"
                android:textColor="@color/color_333333"
                android:layout_marginStart="@dimen/dimen_16_dp"
                android:textSize="@dimen/dimen_16_dp"
                tools:ignore="SpUsage" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/friend_delete_sc"
                android:layout_width="@dimen/dimen_60_dp"
                android:layout_height="@dimen/dimen_20_dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:thumb="@drawable/switch_thumb_selector"
                android:layout_marginEnd="@dimen/dimen_16_dp"
                android:clickable="false"
                app:track="@drawable/switch_track_selector" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_46_dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_46_dp"
                android:gravity="center"
                android:text="@string/setting_message_read_mode"
                android:textColor="@color/color_333333"
                android:layout_marginStart="@dimen/dimen_16_dp"
                android:textSize="@dimen/dimen_16_dp"
                tools:ignore="SpUsage" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/message_read_sc"
                android:layout_width="@dimen/dimen_60_dp"
                android:layout_height="@dimen/dimen_20_dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:thumb="@drawable/switch_thumb_selector"
                android:layout_marginEnd="@dimen/dimen_16_dp"
                android:clickable="false"
                app:track="@drawable/switch_track_selector" />
        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tvLogout"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/tab_mine_logout"
        android:textColor="@color/color_f24957"
        android:textSize="@dimen/dimen_16_dp"
        android:background="@drawable/rectangle_white_reduce_bg"
        android:layout_marginStart="@dimen/dimen_20_dp"
        android:layout_marginEnd="@dimen/dimen_20_dp"
        android:layout_marginTop="@dimen/dimen_16_dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notify_message_ll"
        tools:ignore="NotSibling,SpUsage" />
</androidx.constraintlayout.widget.ConstraintLayout>